# internal/models/user.go
@@ -11,6 +11,7 @@ type User struct {
 	Email     string         `json:"email" gorm:"unique" binding:"required,email"`
 	Password  string         `json:"-"`
 	Role      string         `json:"role" gorm:"default:user"`
+	Groups    []Group        `json:"groups" gorm:"many2many:group_users"`
 	CreatedAt time.Time      `json:"created_at"`
 	UpdatedAt time.Time      `json:"updated_at"`
 	DeletedAt gorm.DeletedAt `gorm:"index" json:"-"`
